WebInject

Copyright 2010 Sven Nierlein (nierlein@cpan.org)
Copyright 2004-2006 Corey Goldberg (corey@goldb.org)
For information and documentation, visit the website at http://www.webinject.org

---------------------------------
Release History:

Version 1.96 - Thu 10 Oct 2019 09:16:08 AM CEST
    - migrate to Net::SSLeay and IO::Socket::SSL

Version 1.94 - Tue Jul 25 11:26:20 CEST 2017
    - Use relative path handling for postbody files (#27)
    - Add support for DELETE (#23)

Version 1.92 - Thu Dec 22 21:26:50 CET 2016
    - Support application/json Content-Type (#22)
    - Fix for uninitialized value $val (#21)

Version 1.90 - Mon Feb  1 17:04:24 CET 2016
    - add new addcookie test case attribute
    - add readme file

Version 1.88 - Wed Aug 19 23:13:41 CEST 2015
    - fix problem with tempfile in perl 5.20

Version 1.86 - Mon Nov 18 16:57:42 CET 2013
    - add support for ssl proxy and proxy auth

Version 1.84 - Fri Nov  1 11:01:23 CET 2013
    - add realserver support (Klapwijk)

Version 1.82 - Fri Nov  1 11:04:23 CET 2013
    - remove temporary files also in nagios ePN mode

Version 1.80 - Fri Sep 13 11:10:40 CEST 2013
    - remove temporary cookie file after test

Version 1.78 - Thu Jan  3 22:49:56 CET 2013
    - replace parsedresult in xml input file
    - added fallback timeout for test cases

Version 1.76 - Tue Nov 13 12:46:14 CET 2012
    - added new case option parsewarning

Version 1.74 - Sat May 12 13:36:48 CEST 2012
    - changed html output into tables (Karsten Sievert)
    - support gzipped content (Simone Tiraboschi)

Version 1.72 - Thu Feb  2 19:15:50 CET 2012
    - fixed using parsed results

Version 1.71 - Tue Jan  3 09:38:27 CET 2012
    - fixed nagios epn support or check_webinject

Version 1.70 - Sat Dec 10 12:40:03 CET 2011
    - variables with -s varname= are now case-insensitive

Version 1.69 - Tue Jul 12 10:25:17 CEST 2011
    - better error message when LWP::protocol::https is missing